[tool.poetry]
name = "leaf-ai-backends"
version = "0.1.0.dev0"
description = "A project that provides AI backnds for LEAF open source projects."
authors = [
    "The LEAF team (past and future) with the help of all our contributors <leaf@shanda.com>",
]
readme = "README.md"
packages = [
    { include = "leaf_ai_backends", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
openai = "^1.12.0"

[tool.black]
line-length = 119
skip-magic-trailing-comma = true
safe = true
required-version = "23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
